--- a/mobile/Leykun_Birhanu/e_commerce_app/pubspec.yaml
+++ b/mobile/Leykun_Birhanu/e_commerce_app/pubspec.yaml
@@ -18,6 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # of the product and file versions while build-number is used as the build suffix.
 version: 1.0.0+1
 
+
 environment:
   sdk: '>=3.4.4 <4.0.0'
 
@@ -35,7 +36,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
-
+  image_picker: ^0.8.6
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -46,7 +47,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^3.0.0
-
+  get:
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
