--- a/mobile/Leykun_Birhanu/e_commerce_app_clean/pubspec.yaml
+++ b/mobile/Leykun_Birhanu/e_commerce_app_clean/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   image_picker: ^0.8.6
+  bloc: ^8.1.4
+  bloc_test: ^9.1.7
 dev_dependencies:
   test: ^1.16.0
   mockito: ^5.0.16
