--- a/mobile/Leykun_Birhanu/e_commerce_app_clean/pubspec.yaml
+++ b/mobile/Leykun_Birhanu/e_commerce_app_clean/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   image_picker: ^0.8.6
   bloc: ^8.1.4
   bloc_test: ^9.1.7
+  get_it: ^7.7.0
 dev_dependencies:
   test: ^1.16.0
   mockito: ^5.0.16
